# biopylib

./: README.md  pyproject.toml  setup.cfg  setup.py
BLAST/: blast_query.py  readme.md  search_amino.py  search_sequence.py
docs/: conf.py  index.rst  reference.rst
sequences/: AAH12844.1.faa  NP_001265185.1.faa  P38398.fasta
src/: example.txt  main.py  sce.py  temp.ipynb
src/biopylib/: motif.py  read_sequence.py  sce.py  sequence.py  sequence_alignment.py
src/biopylib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
