[build-system]
requires = [
    "plotly>=4.12.0",
    "setuptools>=42",
    "wheel",
    "panel>=0.12.4",
    "bokeh>=2.4.0",
    "numpy>=1.19.5",
    "pandas>=1.3.3",
    "scipy>=1.7.3",
    "biopython>=1.78",
    "seaborn>=0.11.2",
    "matplotlib>=3.4.3",
    "colorama>=0.4.4",
    "scanpy>=1.9.1",
    "sklearn>=0.23.2",
    "umap>=0.5.2",
    "termcolor>=1.1.0",
]
build-backend = "setuptools.build_meta"